syntax = "proto3";

package eth.seaport.v1;

message SeaportPurchases {
    repeated Purchase purchases = 1;
}

message Purchase {
    uint64 order_type = 1;
    string from = 2;
    string to = 3;
    string token_in = 4;
    BigDecimal token_in_amount = 5;
    string token_out = 6;
    BigDecimal token_out_amount = 7;
}

message BigDecimal {
    string unscaled_value = 1;
    int32 scale = 2;
}